styles.css
/* ... */
/* footer */
footer {
    background-color: #000;
    color: #fff;
    text-align-last: center;
}

/* obrigado */
#obrigado {
    height: 100dvh;
    display: flex;

    & .txt-obrigado {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        font-size: 2rem;
        margin-top: 10rem;

        & span {
            color: var(--cor-principal);
        }
    }

    & img {
        position: absolute;
        right: 5%;
        bottom: 15%;
        width: 35%;
    }

    & #canto {
        position: absolute;
        bottom: 0;
        left: 0;
        width: 30%;
    }
}

/* responsividade */
@media screen and (max-width: 800px) {

    /* geral */
    header,
    section,
    footer {
        padding: .5rem 1rem;
    }

    .tags {
        justify-content: center;

        & p {
            font-size: .8rem;
        }
    }

    /* header */
    header {
        height: 3.5rem;

        & a {
            font-size: .9rem;
        }

        & nav {
            position: fixed;
            background-color: var(--preto);
            flex-direction: column;
            justify-content: flex-start;
            top: 0;
            right: 0;
            height: 100%;
            width: 0%;
            visibility: hidden;
            padding: 1rem;
            z-index: 1000;
            overflow-x: auto;
            transition: .5s ease all;

            & #menu-fechar {
                display: block;
                background-color: transparent;
                border: none;
                color: var(--cor-principal);
                font-size: 2rem;
                align-self: flex-start;
                cursor: pointer;
            }

            & a {
                font-size: 1.5rem;
                width: 100%;
                justify-content: flex-start;

                &::after,
                &::before {
                    display: none;
                }

                &:hover {
                    background-color: var(--preto-claro);
                    padding: .5rem;
                    border-radius: var(--borda-quadrada);
                }
            }

            &.active {
                width: 80%;
                visibility: visible;
            }
        }

        & #btn-menu {
            display: block;
            background-color: transparent;
            border: none;
            color: var(--cor-principal);
            font-size: 2.5rem;
            cursor: pointer;
        }

        & .overlay {
            display: block;
            position: fixed;
            visibility: hidden;
            left: 0;
            top: 0;
            background-color: #000000c9;
            height: 100%;
            width: 100%;
            z-index: 500;

            &.active {
                visibility: visible;
            }
        }
    }

    /* hero */
    #hero {
        height: auto;
        justify-content: center;
        flex-direction: column-reverse;

        & .txt-hero {
            width: 100%;
            text-align: justify;
            font-size: 1.1rem;

            & h2 {
                font-size: 2rem;
                text-align: center;

                & span {
                    font-size: 2.8rem;
                }
            }

            & a {
                width: 100%;
                padding: .5em;
            }
        }

        & img {
            width: 15rem;
        }
    }

    /* sobre */
    #sobre {
        & .txt-sobre {
            width: 100%;
            text-align: justify;

            & h2 {
                text-align: center;
                font-size: 2rem;
            }

            & .info {
                font-size: 1.5rem;
            }

            & h3 {
                font-size: 1.5rem;
            }

            & .container {
                height: auto;

                & i {
                    font-size: 2rem;
                }
            }

            & p {
                font-size: 1.2rem;
            }

            & a {
                width: 100%;
                padding: .4rem;
            }
        }

        & img {
            display: none;
        }
    }

    /* projetos */
    .swiper-button-next,
    .swiper-button-prev {
        display: none;
    }

    #projetos {

        & h2,
        span {
            font-size: 2rem;
        }
    }


    /* contato */
    #contato {
        height: auto;

        & h2 {
            font-size: 2rem;
        }

        & .container-contato {
            flex-direction: column;
            height: auto;

            & .left {
                width: 100%;
                height: auto;

                & p {
                    font-size: 1.2rem;
                }

                & .links {

                    & a {
                        font-size: 1rem;
                    }
                }
            }

            & .right {
                width: 100%;
                height: auto;
            }
        }
    }

    /* obrigado */
    #obrigado {
        padding: 1rem;
        flex-direction: column;
        align-items: center;

        & .txt-obrigado {
            margin-top: 3rem;
            font-size: 1.2rem;
            width: 100%;
        }

        & img {
            position: relative;
            bottom: auto;
            left: auto;
            width: 70%;
        }

        & #canto {
            width: 50%;
        }
    }
}

